Update to libsignal 0.45 and use libsignal's BackupLevel