@@ -15,6 +15,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.EnumSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.signal.libsignal.protocol.ecc.Curve;
+import org.signal.libsignal.zkgroup.backups.BackupLevel;
 import org.whispersystems.textsecuregcm.auth.AuthenticatedBackupUser;
 import org.whispersystems.textsecuregcm.storage.DynamoDbExtension;
 import org.whispersystems.textsecuregcm.storage.DynamoDbExtensionSchema;
@@ -48,7 +49,7 @@ public class BackupsDbTest {
 
   @Test
   public void trackMediaStats() {
-    final AuthenticatedBackupUser backupUser = backupUser(TestRandomUtil.nextBytes(16), BackupTier.MEDIA);
+    final AuthenticatedBackupUser backupUser = backupUser(TestRandomUtil.nextBytes(16), BackupLevel.MEDIA);
     // add at least one message backup so we can describe it
     backupsDb.addMessageBackup(backupUser).join();
     int total = 0;
@@ -71,7 +72,7 @@ public class BackupsDbTest {
   @ValueSource(booleans = {false, true})
   public void setUsage(boolean mediaAlreadyExists) {
     testClock.pin(Instant.ofEpochSecond(5));
-    final AuthenticatedBackupUser backupUser = backupUser(TestRandomUtil.nextBytes(16), BackupTier.MEDIA);
+    final AuthenticatedBackupUser backupUser = backupUser(TestRandomUtil.nextBytes(16), BackupLevel.MEDIA);
     if (mediaAlreadyExists) {
       this.backupsDb.trackMedia(backupUser, 1, 10).join();
     }
@@ -87,12 +88,12 @@ public class BackupsDbTest {
     final byte[] backupId = TestRandomUtil.nextBytes(16);
     // Refresh media/messages at t=0
     testClock.pin(Instant.ofEpochSecond(0L));
-    backupsDb.setPublicKey(backupId, BackupTier.MEDIA, Curve.generateKeyPair().getPublicKey()).join();
-    this.backupsDb.ttlRefresh(backupUser(backupId, BackupTier.MEDIA)).join();
+    backupsDb.setPublicKey(backupId, BackupLevel.MEDIA, Curve.generateKeyPair().getPublicKey()).join();
+    this.backupsDb.ttlRefresh(backupUser(backupId, BackupLevel.MEDIA)).join();
 
     // refresh only messages at t=2
     testClock.pin(Instant.ofEpochSecond(2L));
-    this.backupsDb.ttlRefresh(backupUser(backupId, BackupTier.MESSAGES)).join();
+    this.backupsDb.ttlRefresh(backupUser(backupId, BackupLevel.MESSAGES)).join();
 
     final Function<Instant, List<ExpiredBackup>> expiredBackups = purgeTime -> backupsDb
         .getExpiredBackups(1, Schedulers.immediate(), purgeTime)
@@ -104,8 +105,8 @@ public class BackupsDbTest {
         .matches(eb -> eb.expirationType() == ExpiredBackup.ExpirationType.MEDIA);
 
     // Expire the media
-    backupsDb.startExpiration(expired.get(0)).join();
-    backupsDb.finishExpiration(expired.get(0)).join();
+    backupsDb.startExpiration(expired.getFirst()).join();
+    backupsDb.finishExpiration(expired.getFirst()).join();
 
     // should be nothing to expire at t=1
     assertThat(expiredBackups.apply(Instant.ofEpochSecond(1))).isEmpty();
@@ -116,8 +117,8 @@ public class BackupsDbTest {
         .matches(eb -> eb.expirationType() == ExpiredBackup.ExpirationType.ALL);
 
     // Expire the messages
-    backupsDb.startExpiration(expired.get(0)).join();
-    backupsDb.finishExpiration(expired.get(0)).join();
+    backupsDb.startExpiration(expired.getFirst()).join();
+    backupsDb.finishExpiration(expired.getFirst()).join();
 
     // should be nothing to expire at t=3
     assertThat(expiredBackups.apply(Instant.ofEpochSecond(3))).isEmpty();
@@ -129,13 +130,13 @@ public class BackupsDbTest {
     final byte[] backupId = TestRandomUtil.nextBytes(16);
     // Refresh media/messages at t=0
     testClock.pin(Instant.ofEpochSecond(0L));
-    backupsDb.setPublicKey(backupId, BackupTier.MEDIA, Curve.generateKeyPair().getPublicKey()).join();
-    this.backupsDb.ttlRefresh(backupUser(backupId, BackupTier.MEDIA)).join();
+    backupsDb.setPublicKey(backupId, BackupLevel.MEDIA, Curve.generateKeyPair().getPublicKey()).join();
+    this.backupsDb.ttlRefresh(backupUser(backupId, BackupLevel.MEDIA)).join();
 
     if (expirationType == ExpiredBackup.ExpirationType.MEDIA) {
       // refresh only messages at t=2 so that we only expire media at t=1
       testClock.pin(Instant.ofEpochSecond(2L));
-      this.backupsDb.ttlRefresh(backupUser(backupId, BackupTier.MESSAGES)).join();
+      this.backupsDb.ttlRefresh(backupUser(backupId, BackupLevel.MESSAGES)).join();
     }
 
     final Function<Instant, Optional<ExpiredBackup>> expiredBackups = purgeTime -> {
@@ -160,17 +161,17 @@ public class BackupsDbTest {
     if (expirationType == ExpiredBackup.ExpirationType.MEDIA) {
       // Media expiration should swap the media name and keep the backup name, marking the old media name for expiration
       assertThat(expired.prefixToDelete())
-          .isEqualTo(originalBackupDir + "/" + originalMediaDir)
-          .withFailMessage("Should expire media directory, expired %s", expired.prefixToDelete());
-      assertThat(info.backupDir()).isEqualTo(originalBackupDir).withFailMessage("should keep backupDir");
-      assertThat(info.mediaDir()).isNotEqualTo(originalMediaDir).withFailMessage("should change mediaDir");
+          .withFailMessage("Should expire media directory, expired %s", expired.prefixToDelete())
+          .isEqualTo(originalBackupDir + "/" + originalMediaDir);
+      assertThat(info.backupDir()).withFailMessage("should keep backupDir").isEqualTo(originalBackupDir);
+      assertThat(info.mediaDir()).withFailMessage("should change mediaDir").isNotEqualTo(originalMediaDir);
     } else {
       // Full expiration should swap the media name and the backup name, marking the old backup name for expiration
       assertThat(expired.prefixToDelete())
-          .isEqualTo(originalBackupDir)
-          .withFailMessage("Should expire whole backupDir, expired %s", expired.prefixToDelete());
-      assertThat(info.backupDir()).isNotEqualTo(originalBackupDir).withFailMessage("should change backupDir");
-      assertThat(info.mediaDir()).isNotEqualTo(originalMediaDir).withFailMessage("should change mediaDir");
+          .withFailMessage("Should expire whole backupDir, expired %s", expired.prefixToDelete())
+          .isEqualTo(originalBackupDir);
+      assertThat(info.backupDir()).withFailMessage("should change backupDir").isNotEqualTo(originalBackupDir);
+      assertThat(info.mediaDir()).withFailMessage("should change mediaDir").isNotEqualTo(originalMediaDir);
     }
     final String expiredPrefix = expired.prefixToDelete();
 
@@ -189,7 +190,7 @@ public class BackupsDbTest {
       // should be nothing to expire at t=1
       assertThat(opt).isEmpty();
       // The backup should still exist
-      backupsDb.describeBackup(backupUser(backupId, BackupTier.MEDIA)).join();
+      backupsDb.describeBackup(backupUser(backupId, BackupLevel.MEDIA)).join();
     } else {
       // Cleaned up the failed attempt, now should tell us to clean the whole backup
       assertThat(opt.get()).matches(eb -> eb.expirationType() == ExpiredBackup.ExpirationType.ALL,
@@ -199,20 +200,14 @@ public class BackupsDbTest {
 
       // The backup entry should be gone
       assertThat(CompletableFutureTestUtil.assertFailsWithCause(StatusRuntimeException.class,
-          backupsDb.describeBackup(backupUser(backupId, BackupTier.MEDIA)))
-              .getStatus().getCode())
+              backupsDb.describeBackup(backupUser(backupId, BackupLevel.MEDIA)))
+          .getStatus().getCode())
           .isEqualTo(Status.Code.NOT_FOUND);
       assertThat(expiredBackups.apply(Instant.ofEpochSecond(10))).isEmpty();
     }
   }
 
-  private AuthenticatedBackupUser backupUser(final byte[] backupId, final BackupTier backupTier) {
-    return new AuthenticatedBackupUser(backupId, backupTier, "myBackupDir", "myMediaDir");
-  }
-
-  private AuthenticatedBackupUser backupUserFromDb(final byte[] backupId, final BackupTier backupTier) {
-    final BackupsDb.AuthenticationData authenticationData = backupsDb.retrieveAuthenticationData(backupId).join().get();
-    return new AuthenticatedBackupUser(backupId, backupTier,
-        authenticationData.backupDir(), authenticationData.mediaDir());
+  private AuthenticatedBackupUser backupUser(final byte[] backupId, final BackupLevel backupLevel) {
+    return new AuthenticatedBackupUser(backupId, backupLevel, "myBackupDir", "myMediaDir");
   }
 }
